--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   datasource:
-    password: Matru@003
+    password: ${password}
     url: jdbc:postgresql://localhost:5555/USERS
     username: postgres
 
